--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,54 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.transition-container {
+  transition: opacity 0.5s ease-in-out;
+  opacity: 0;
+}
+
+.fade-in {
+  opacity: 1;
+}
+
+.fade-out {
+  opacity: 0;
+}
+
+/*.transition-container {
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  height: 100vh;
+}*/
+
+.slide-in {
+  transform: translateX(100%);
+  animation: slide-in 0.5s forwards;
+}
+
+.slide-out {
+  transform: translateX(0);
+  animation: slide-out 0.5s forwards;
+}
+
+@keyframes slide-in {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slide-out {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
+
 /* Scrollbar Styling */
 ::-webkit-scrollbar {
   width: 8px;
