--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,13 @@
 @tailwind components;
 @tailwind utilities;
 
+.button-start {
+    @apply py-4 px-8 md:px-12 rounded-lg;
+    @apply text-white md:text-xl;
+    @apply hover:scale-95 duration-300;
+}
+
+
 .button-green {
   @apply bg-green-dark py-2 px-4 md:px-12 rounded-full;
   @apply text-white md:text-xl;
